# meta-regex-golf

./: .gitignore  BENCH.md  Cargo.toml  README.md  bench.sh  bench.txt  benches.txt  build.sh  norvig.py  norvig_cache.py  norvig_nocache.py  process.py
v1_naive/: Cargo.toml
v2_regex_feats/: Cargo.toml
v3_cheep_tricks/: Cargo.toml  main.rs
v4_inline_never/: Cargo.toml  main.rs
v5_cache_regex/: Cargo.toml  main.rs
v6_regex_feats/: Cargo.toml
v7_jemalloc/: Cargo.toml  main.rs
