[package]
name = "v1_naive"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "v1_naive"
path = "main.rs"


[dependencies]
regex = "1.3.7"
itertools = "0.9.0"