[package]
name = "v6_regex_feats"
version = "0.1.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "v6_regex_feats"
path = "main.rs"
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
itertools = "0.9.0"
[dependencies.regex]
version = "1.3.0"
default-features = false
features = ["std", "perf-cache", "perf-literal"]